<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    android:background="#263645">

    <!-- Icona Profilo -->
    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/circle_shape"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_icon"
        android:contentDescription="@string/profile_picture" />

    <!-- Nome Utente -->
    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_utente"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff"

        android:layout_marginBottom="8dp"/>

    <!-- Email Utente -->
    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_example_com"
        android:textSize="16sp"
        android:textColor="#CCCCCC"
        android:layout_marginBottom="32dp"/>

    <!-- Pulsante Logout -->
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/logout"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:backgroundTint="#ef5350"
        android:layout_marginBottom="16dp"/>

    <!-- Pulsante Lista Manco -->
    <Button
        android:id="@+id/mancoListButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/lista_manco"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:backgroundTint="#42a5f5"/>
</LinearLayout>
